# AwsIBoxStackOps

./: .gitignore  README.md  ibox_add_to_dash.py  ibox_manage_stacks.py  ibox_ssm.py  ibox_stackops.py  ibox_stackops.unused  process_template.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
iboxstacksops/: __init__.py  actions.py  args.py  aws.py  cfg.py  changeset.py  commands.py  common.py  dashboard.py  events.py  i_region.py  i_stack.py  iregion.py  istack.py  log.py  msg.py  outputs.py  parameters.py  parser.py  replica.py  resolve.py  resources.py  route53.py  ssm.py  stacks.py  stackset.py  table.py  tags.py  template.py  tools.py  update.py
scripts/: ibox_stacksops.py
