[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iboxstacksops"
description = "AWS Infrastructure in a Box - Stacks management program"
readme = "README.md"
authors = [
    { name = "Mello", email = "mello+python@ankot.org" }
]
license = { text = "OSI Approved :: Open Software License 3.0 (OSL-3.0)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"
dependencies = [
    "boto3",
    "prettytable",
    "PyYAML>=5,==5.*",
    "tqdm"
]
dynamic = ["version"]

[project.scripts]
ibox_stacksops = "iboxstacksops.__main__:main"

[tool.setuptools]
packages = ["iboxstacksops"]
include-package-data = true

[tool.setuptools.package-data]
# Empty section since you had an empty package_data={}, omit or customize if needed

[tool.setuptools.dynamic]
version = { attr = "iboxstacksops.__version__" }
